--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -29,19 +29,19 @@ html:not(.dark) {
 
 html.dark {
   --prism-foreground: #d4cfbf;
-  --prism-background: #151515;
+  --prism-background: #0F0F0F;
   --prism-comment: #758575;
   --prism-string: #d48372;
   --prism-literal: #429988;
-  --prism-keyword: #4d9375;
+  --prism-keyword: #10B981;
   --prism-boolean: #1c6b48;
   --prism-number: #6394bf;
   --prism-variable: #c2b36e;
   --prism-function: #a1b567;
   --prism-deleted: #a14f55;
   --prism-class: #54b1bf;
-  --prism-builtin: #e0a569;
-  --prism-property: #dd8e6e;
+  --prism-builtin: #DB2777;
+  --prism-property: #3B82F6;
   --prism-namespace: #db889a;
   --prism-punctuation: #858585;
   --prism-decorator: #bd8f8f;
@@ -51,4 +51,43 @@ html.dark {
   --prism-line-number-gutter: #eeeeee;
   --prism-line-highlight-background: #444444;
   --prism-selection-background: #444444;
+}
+
+a.header-anchor {
+  float: left;
+  margin-top: .125em;
+  margin-left: -1.2em;
+  padding-right: .50em;
+  font-size: .85em;
+  opacity: 0;
+  text-decoration: none;
+  border: 0 !important;
+}
+
+a.header-anchor:hover,
+a.header-anchor:focus {
+  text-decoration: none;
+}
+
+h1:hover .header-anchor,
+h1:focus .header-anchor,
+h2:hover .header-anchor,
+h2:focus .header-anchor,
+h3:hover .header-anchor,
+h3:focus .header-anchor,
+h4:hover .header-anchor,
+h4:focus .header-anchor,
+h5:hover .header-anchor,
+h5:focus .header-anchor,
+h6:hover .header-anchor,
+h6:focus .header-anchor {
+  opacity: 0.5;
+}
+
+.prose pre code {
+  font-size: 0.875rem;
+}
+
+.prose svg {
+  display: inline;
 }
